--- a/template.html
+++ b/template.html
@@ -5,7 +5,26 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <!-- Primary Meta Tags -->
     <title>Corona Count</title>
+    <meta name="title" content="Corona Count">
+    <meta name="description" content="Let's panic! Counting the number of times the word Corona is mentioned on major news sites.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://cc.tsak.net/">
+    <meta property="og:title" content="Corona Count">
+    <meta property="og:description" content="Let's panic! Counting the number of times the word Corona is mentioned on major news sites.">
+    <meta property="og:image" content="https://cc.tsak.net/corona.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://cc.tsak.net/">
+    <meta property="twitter:title" content="Corona Count">
+    <meta property="twitter:description" content="Let's panic! Counting the number of times the word Corona is mentioned on major news sites.">
+    <meta property="twitter:image" content="https://cc.tsak.net/corona.jpg">
+
     <style>
         body {
             font-family: sans-serif;
