mention the point of all this in frontend

--- a/template.html
+++ b/template.html
@@ -97,7 +97,7 @@
 </head>
 <body>
 <h1>Corona Count</h1>
-<p>Let's panic!</p>
+<p>Let's panic! Counting the number of times <em>Corona</em> is being mentioned on major news sites.</p>
 <ul>
     {{range .Sites}}
         <li><a href="{{ .URL }}">{{ .Name }} <small>{{ .Count }}</small>
