show alternative phrases that we're grepping

--- a/template.html
+++ b/template.html
@@ -130,7 +130,7 @@
 </head>
 <body>
 <h1>Corona Count</h1>
-<p>Let's panic! Counting the number of times <em>Corona</em> is being mentioned on major news sites.</p>
+<p>Let's panic! Counting the number of times <em title="Also Covid-19, SARS-CoV-2">Corona</em> is being mentioned on major news sites.</p>
 <ul>
     {{range .Sites}}
         <li>
